Fix get single jetton balance
